--- a/src/doors/clans-src/src/reset.vcxproj
+++ b/src/doors/clans-src/src/reset.vcxproj
@@ -61,7 +61,7 @@
       <AssemblerListingLocation>.\Win32_Release\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Win32_Release\reset.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Win32_Release\</ObjectFileName>
-      <ProgramDataBaseFileName>.\Win32_Release\</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>.\Win32_Release\reset.pdb</ProgramDataBaseFileName>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Midl>
@@ -92,7 +92,7 @@
       <AssemblerListingLocation>.\Win32_Debug\</AssemblerListingLocation>
       <PrecompiledHeaderOutputFile>.\Win32_Debug\reset.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Win32_Debug\</ObjectFileName>
-      <ProgramDataBaseFileName>.\Win32_Debug\</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>.\Win32_Debug\reset.pdb</ProgramDataBaseFileName>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Midl>
