Add dependencies on binaries for data files
The format of the output is controlled by the binaries, so if they
change, the data file potentially needs to be rebuilt.

--- a/src/doors/clans-src/data/GNUmakefile
+++ b/src/doors/clans-src/data/GNUmakefile
@@ -4,6 +4,7 @@ include $(SRC)/mk/Platform.gmake
 include $(SRC)/mk/Paths.gmake
 
 PAKFILES :=	$(shell awk '{print $$1}' pak.lst)
+NATIVEEXEFILE :=$(shell env - PATH="$(PATH)" $(MAKE) -C ../src native-exefile | awk '/^NATIVE EXEFILE:/ {print $$3}')
 
 pak: clans.pak
 
@@ -14,31 +15,31 @@ all: pak
 native-devkit:
 	env - PATH="$(PATH)" $(MAKE) -C ../src devkit
 
-%.e: %.evt | native-devkit
+%.e: %.evt $(BINDIR)ecomp $(BINDIR)ecomp$(NATIVEEXEFILE) | native-devkit
 	$(BINDIR)ecomp $< $@
 
-%.q: %.txt | native-devkit
+%.q: %.txt $(BINDIR)ecomp $(BINDIR)ecomp$(NATIVEEXEFILE) | native-devkit
 	$(BINDIR)ecomp $< $@
 
-%.xl: %.txt | native-devkit
+%.xl: %.txt $(BINDIR)langcomp $(BINDIR)langcomp$(NATIVEEXEFILE) | native-devkit
 	$(BINDIR)langcomp $< $@
 
-%.mon: %.txt | native-devkit
+%.mon: %.txt $(BINDIR)mcomp $(BINDIR)mcomp$(NATIVEEXEFILE) | native-devkit
 	$(BINDIR)mcomp $< $@
 
-%.spl: %.txt | native-devkit
+%.spl: %.txt $(BINDIR)mspells $(BINDIR)mspells$(NATIVEEXEFILE) | native-devkit
 	$(BINDIR)mspells $< $@
 
-%.itm: %.txt | native-devkit
+%.itm: %.txt $(BINDIR)mitems $(BINDIR)mitems$(NATIVEEXEFILE) | native-devkit
 	$(BINDIR)mitems $< $@
 
-%.cls: %.txt | native-devkit
+%.cls: %.txt $(BINDIR)mclass $(BINDIR)mclass$(NATIVEEXEFILE) | native-devkit
 	$(BINDIR)mclass $< $@
 
-%.npc: %.txt | native-devkit
+%.npc: %.txt $(BINDIR)makenpc $(BINDIR)makenpc$(NATIVEEXEFILE) | native-devkit
 	$(BINDIR)makenpc $< $@
 
-clans.pak: pak.lst $(PAKFILES)
+clans.pak: pak.lst $(PAKFILES) $(BINDIR)makepak$(NATIVEEXEFILE)
 	$(BINDIR)makepak $@ $<
 
 clean:
