Allow "good" packet extension to be specified with -good=fext option
... for recovered packet files created from the -split and -recover options.

No change to the ".bad" generated filename (created with the -split option).

The default good packet extension is now ".good.pkt" and it will replace the
existing final/last file extension in the recovered packet filename.
e.g. 'pktdump -recover e0d9ec00.msg-hdr.bad' will create
e0d9ec00.msg-hdr.good.pkt by default. The ".good.pkt" part can be overriden
with the new "-good=fext" command-line option.

I think this addresses issue #1000

If you'd prefer the entire file extension (e.g. ".msg-hdr.bad") be replaced
with a different extension, let me know and I'll try to figure the best way
to opt-in or enable that behavior. We definitely don't want to be careful to
not accidentally overwrite existing files.

--- a/src/sbbs3/GNUmakefile
+++ b/src/sbbs3/GNUmakefile
@@ -317,7 +317,7 @@ $(READSAUCE): $(READSAUCE_OBJS) | $(EXEODIR) $(OBJODIR)
 # PKTDUMP
 $(PKTDUMP): $(PKTDUMP_OBJS) | $(OBJODIR) $(EXEODIR)
 	@echo Linking $@
-	$(QUIET)$(CC) $(CONSOLE_LDFLAGS) -o $@ $(PKTDUMP_OBJS)
+	$(QUIET)$(CC) $(CONSOLE_LDFLAGS) -o $@ $(PKTDUMP_OBJS) $(XPDEV_LIBS)
 
 # FMSGDUMP
 $(FMSGDUMP): $(FMSGDUMP_OBJS) | $(EXEODIR) $(OBJODIR)
