Enable -Wconversion in debug builds.
There's a lot of poor type choices in this code, most of them left
over from the conversion from 16-bits to 32-bits. Enable warnings
to help track them down.

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -29,7 +29,7 @@ endif
 
 # Build types, debug and opt
 ifdef DEBUG
- CFLAGS	+=	-g -O0 -Wall -pedantic
+ CFLAGS	+=	-g -O0 -Wall -pedantic -Wconversion
  LDFLAGS +=	-g
 else
  CFLAGS	+=	-O3 -DNDEBUG -flto
