--- a/src/doors/clans-src/src/mcomp.vcxproj
+++ b/src/doors/clans-src/src/mcomp.vcxproj
@@ -7,6 +7,7 @@
   <Import Project="clanslib.props" />
   <ItemGroup>
     <ClCompile Include="mcomp.c" />
+    <ClCompile Include="tools.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="crc.h" />
