And misc.o for those with System_Exit()
Alas, tools.c and misc.c define the same symbols, so I can't put
either in clanslib.lib

--- a/src/doors/clans-src/src/config.vcxproj
+++ b/src/doors/clans-src/src/config.vcxproj
@@ -8,6 +8,7 @@
   <Import Project="clanslib.props" />
   <ItemGroup>
     <ClCompile Include="config.c" />
+    <ClCompile Include="misc.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h" />
