--- a/src/doors/clans-src/src/reset.vcxproj
+++ b/src/doors/clans-src/src/reset.vcxproj
@@ -7,6 +7,7 @@
   <Import Project="clanslib.props" />
   <ItemGroup>
     <ClCompile Include="reset.c" />
+    <ClCompile Include="misc.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="alliance.h" />
