Add INSTALL_BINARIES to clean target

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -144,6 +144,7 @@ clean:
 	rm -rf $(OBJDIR)
 	rm -f $(DOOR_BINARIES)
 	rm -f $(DEVKIT_BINARIES)
+	rm -f $(INSTALL_BINARIES)
 
 $(OBJDIR):
 	mkdir -p $@
