Update all IBBS sends to use the "new way"
Also, don't create all the intermediate files, just write everything
to the final packet file.

While we're here, defer writing the .msg file until IBBS_Close(), which
allows multiple packets to be combined into a single file. This feature
was always there, but it was appending *after* creating the .msg file,
which was Very Bad, and so it got disabled.

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -61,8 +61,7 @@ CLANS_OBJS :=	$(OBJDIR)alliance.o $(OBJDIR)alliancem.o \
 		$(OBJDIR)serialize.o $(OBJDIR)spells.o $(OBJDIR)system.o \
 		$(OBJDIR)trades.o $(OBJDIR)unix_wrappers.o \
 		$(OBJDIR)user.o $(OBJDIR)video.o $(OBJDIR)village.o \
-		$(OBJDIR)voting.o $(OBJDIR)wb_fapnd.o \
-		$(OBJDIR)win_wrappers.o
+		$(OBJDIR)voting.o $(OBJDIR)win_wrappers.o
 
 CHEW_OBJS :=	$(OBJDIR)chew.o $(OBJDIR)gum.o $(OBJDIR)parsing.o \
 		$(OBJDIR)win_wrappers.o
