Optimize for size instead of speed.
This almost halves the size of the binary.

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -32,8 +32,8 @@ ifdef DEBUG
  CFLAGS	+=	-g -O0 -Wall -pedantic -Wconversion
  LDFLAGS +=	-g
 else
- CFLAGS	+=	-O3 -DNDEBUG -flto
- LDFLAGS +=	-O3 -flto -fwhole-program
+ CFLAGS	+=	-Oz -DNDEBUG -flto
+ LDFLAGS +=	-Oz -flto -fwhole-program
  ifeq ($(os),darwin)
   LDFLAGS +=	-Wl,-x,-dead_strip
  else
